WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294310
Google Spreadsheet is glitchy in Safari
https://bugs.webkit.org/show_bug.cgi?id=294310
Summary
Google Spreadsheet is glitchy in Safari
Ryosuke Niwa
Reported
2025-06-10 21:22:48 PDT
Reproduction steps: 1. Load a Google sheets page 2. Command-+ to increase the zoom 3. Switch to another tab 4. Resize the window 5. Switch back, move the selection around -> corruption. The issue does not reproduce on Chrome or Firefox. <
rdar://144401504
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-06-10 21:27:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46590
EWS
Comment 2
2025-06-11 23:49:59 PDT
Committed
296124@main
(8dbebaa6d56b): <
https://commits.webkit.org/296124@main
> Reviewed commits have been landed. Closing PR #46590 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug