Google Spreadsheet is glitchy in Safari https://bugs.webkit.org/show_bug.cgi?id=294310

Reviewed by Simon Fraser.

The bug was caused by WebKit firing resize event before visibilitychange event.
Defer the dispatching of resize event while the page is not visible to emulate the behavior of Chrome.

This fixes the glitch on Google spreadsheet.

* LayoutTests/fast/events/page-visibility-resize-event-order-expected.txt: Added.
* LayoutTests/fast/events/page-visibility-resize-event-order.html: Added.
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::visibilityStateChanged):
(WebCore::Document::runResizeSteps):
* Source/WebCore/dom/Document.h:

Canonical link: https://commits.webkit.org/296124@main